# manifest

./: .gitignore  2171631_3816549869853662294.manifest  2171631_414131114173524553.manifest  2171631_5009761347912176641.manifest  2171631_6350962614836841514.manifest  2644211_146395607800599938.manifest  2644211_3756711729391737279.manifest  2644211_9077406806042397839.manifest  2731992_2161428377219678799.manifest  3311500_5307848932499847848.manifest  GITHUB_ACTIONS_SUMMARY.md  Key.vdf  OPTIMIZATION_SUMMARY.md  POETRY_GUIDE.md  README.md  STRUCTURE.md  WORKFLOWS.md  WORKFLOW_FIXES_SUMMARY.md  WORKFLOW_TROUBLESHOOTING.md  appinfo.vdf  build.py  clean.py  config.json  config.vdf  constants.py  dev.py  extract.py  main.py  pyproject.toml  repo.py  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  clean.yml  code-quality.yml  extract.yml  release.yml  security.yml  simple-ci.yml
src/steam_manifest/: __init__.py
src/steam_manifest/cli/: __init__.py  args.py  banner.py  main.py
src/steam_manifest/core/: __init__.py  client.py  config.py  github_client.py  steam_client.py
src/steam_manifest/tools/: __init__.py  cleaner.py  extractor.py
src/steam_manifest/utils/: __init__.py  deduplicator.py  git_helper.py  input_helper.py  logger.py  steam_helper.py
