[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-manifest-tool"
version = "3.5.0"
authors = [
    {name = "Steam Manifest Team", email = "dev@steammanifest.tool"},
]
description = "A modern tool for fetching and managing Steam game manifest files"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "vdf>=3.4",
    "colorama>=0.4.6",
    "colorlog>=6.7.0",
    "retrying>=1.3.4",
    "gitpython>=3.1.30",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pyinstaller>=5.13.0",
]

[project.urls]
"Homepage" = "https://github.com/steam-manifest/tool"
"Bug Reports" = "https://github.com/steam-manifest/tool/issues"
"Source" = "https://github.com/steam-manifest/tool"

[project.scripts]
steam-manifest = "src.steam_manifest.cli.main:main"
steam-extract = "src.steam_manifest.tools.extractor:extract_repository_info"
steam-clean = "src.steam_manifest.tools.cleaner:clean_repository_history"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pylint]
max-line-length = 88